2012-02-24  Jeff Johnston  <jjohnstn@redhat.com>

	Bug #372557
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/AutotoolsNewMakeGenerator.java (runScript): Fix
	index out of range exception when environment variable is unknown.

2011-12-16  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/AutotoolsPropertyConstants.java (fACVersions): Add
	2.68.
	(fAMVersions): Add 1.11.1.

2011-10-19  Jeff Johnston  <jjohnstn@redhat.com>

	Bug #361461
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/AutotoolsNewMakeGenerator.java (regenerateMakefiles): Fix autogen.sh
	case whereby autogen.sh doesn't run or create configure script.

2011-10-03  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/configure/FlagConfigureOption.java (getParameter): Remote
	extraneous space at beginning of CFLAGS constructed string.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/configure/ConfigureMessages.properties: Fix tips for
	various CFLAGS settings.

2011-10-03  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/configure/AbstractConfigurationOption.java (isFlag): New method.
	(isFlagValue): Ditto.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/configure/AutotoolsConfigurationManager.java (getSavedConfigs): Add
	support for flags and flag values.
	(saveConfigs): Ditto.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/configure/AutotoolsConfiguration.java (initConfigOptions): Ditto.
	(configOpts): New CFLAGS and value options.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/configure/ConfigureMessages.java (getParameter): New method.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/configure/ConfigureOptionCategory.java (isFlagValue): New method.
	(isFlag): Ditto.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/configure/IConfigureOption.java (isFlag): New method.
	(isFlagValue): Ditto.